--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "netlify deploy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +28,10 @@
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.4",
+    "netlify-cli": "^17.23.2",
+    "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.0",
+    "serverless-http": "^3.2.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "validator": "^13.11.0"
