--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.3.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.4",
+    "netlify": "^13.1.15",
     "netlify-cli": "^17.23.2",
     "netlify-lambda": "^2.0.16",
     "nodemon": "^3.1.0",
